# tensorpc

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml
distflow/: __init__.py  compat.py  constants.py  tools.py
distflow/autossh/: __init__.py
distflow/cli/: __main__.py
distflow/core/: asyncclient.py  asyncserver.py  client.py  core_io.py  httpclient.py  httpserver.py  inspecttools.py  marker.py  prim.py  server.py  server_core.py  serviceunit.py
distflow/protos/: arraybuf.proto  arraybuf_pb2.py  remote_object.proto  remote_object_pb2.py  remote_object_pb2_grpc.py  rpc_message.proto  rpc_message_pb2.py  rpc_message_pb2.pyi  wsdef.proto  wsdef_pb2.py  wsdef_pb2.pyi
distflow/serve/: __main__.py
distflow/serve_sync/: __main__.py
distflow/services/: for_test.py  serv_def.yaml
distflow/utils/: wait_tools.py
docs/: design.md  reload.md
docs/flow/: why_and_whynot.md
scripts/: debug_pyright.py  dev_bg.py  dev_bg_remote_comp.py  dev_bkpt_exc.py  dev_clean_ptx.py  dev_control_point.py  dev_dantic.py  dev_dbg_bkpt.py  dev_pth_mnist.py  dev_trace.py  dev_ttfs.py  dev_ttfs_jitx.py  dev_vapi.py  setup_ssh_codespace.sh
scripts/autossh/: dev_ssh_task_wrapper.py  dev_ssh_ui.py
scripts/flowui/: dev_pthfx.py
scripts/tracer/: rttracer.py
tensorpc/: __init__.py  compat.py  constants.py  protos_export.py  tools.py
tensorpc/autossh/: __init__.py  constants.py  core.py  coretypes.py  dev.py  serv_names.py  wtf.py
tensorpc/core/: __init__.py  annolib.py  asyncclient.py  asyncserver.py  asynctools.py  bgserver.py  client.py  constants.py  core_io.py  dataclass_dispatch.py  defs.py  funcid.py  httpclient.py  httpserver.py  inspecttools.py  marker.py  moduleid.py  prim.py  server.py  server_core.py  serviceunit.py  tracer.py  tree_id.py
tensorpc/dbg/: __init__.py  bkpt.py  constants.py  serv_names.py  tracer.py  utils.py
test/: debug_pyright.py  def_pth_record_dist.py  dev_bg.py  dev_bkpt_exc.py  dev_dantic.py  dev_dbg_bkpt.py  dev_print.py  dev_pth_fx.py  dev_pth_trace.py  dev_reload.py  dev_symflow.py  dev_vapi.py  jsonlike_dantic.py  rtx.py  test_draft.py  test_tmux_scheduler.py  wtf.md  wtf.py
(+572 files in other folders)
