[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorpc"
description = "Backend for devdock."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yan Yan", email = "yanyan.sub@outlook.com" },
]
urls = { Homepage = "https://github.com/FindDefinition/tensorpc" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "protobuf>=3.18.0",
    "grpcio>=1.48.2",
    "grpcio-tools>=1.48.2",
    "fire",
    "pytest",
    "pytest-asyncio",
    "pyyaml",
    "numpy",
    "msgpack",
    "requests",
    "aiohttp",
    "asyncssh",
    "mashumaro",
    "pillow",
    "jinja2",
    "async-timeout",
    "watchdog",
    "typing_extensions>=4.12.2",
    "pyOpenSSL>=23.0.0",
    "cryptography>=39.0.0",
    "psutil",
    "libtmux",
    "humanize",
    "pyright[nodejs]",
    "pydantic>=2.7,<3.0",
    "setproctitle",
    "rich",
    "jmespath-community",
    "hsluv",
    "fsspec",
    "orjson",
    "lark",
    "cmap",
    "aiortc",
    "pyte",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "sphinx",
    "docutils",
    "Faker",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools_scm]
version_file = "tensorpc/__version__.py"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    "build",
    "tensorpc.egg-info",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
    "E741",
    "F541",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    'tensorpc.protos.*',
    'tensorpc.protos_legacy.*',
]
ignore_errors = true
